--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "protractor": "^2.1.0",
     "shelljs": "^0.2.6"
   },
+  "dependencies": {
+    "http-server": "^0.6.1",
+    "bower": "^1.3.1",
+    "shelljs": "^0.2.6"
+  },
   "scripts": {
-    "postinstall": "bower install",
+    "postinstall" : "./node_modules/bower/bin/bower install",
 
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1",
