--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,9 @@
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
     "html5-boilerplate": "~5.2.0",
-    "angular-moment": "~0.10.1"
+    "angular-moment": "~0.10.1",
+    "bootstrap": "~3.3.5",
+    "angular-bootstrap": "~0.13.0",
+    "jquery": "~2.1.4"
   }
 }
